--- a/index.html
+++ b/index.html
@@ -58,6 +58,14 @@
         <div class="block" id="block2">
             <div class="block-title" >Power BI</div>
             <div class="block-content">
+                <a href="https://app.powerbi.com/groups/me/apps/b8cef0ae-8180-42d0-a766-796ba62b716c?experience=power-bi" target="_blank">
+                    <img src="image/icons8-power-bi-48.png" alt="Icon">
+                    <span>ISE APAC Reporting</span>
+                </a>
+                <a href="https://app.powerbi.com/groups/me/apps/b92a7fc2-d3c1-43df-bc8c-ce93ae30c532?experience=power-bi" target="_blank">
+                    <img src="image/icons8-power-bi-48.png" alt="Icon">
+                    <span>NEA OpEx ToolKits</span>
+                </a>
                 <a href="https://apps.powerapps.com/play/e/f7412fd1-df37-e491-96a1-b39097d2d152/a/d622b7d8-8c70-4067-bfb8-0b7758c47a75?tenantId=5ab0514a-59fa-4283-934f-c1c2c4a1f032" target="_blank">
                     <img src="image/icons8-power-bi-48.png" alt="Icon">
                     <span>PowerAPP PBI</span>
@@ -90,14 +98,7 @@
                     <img src="image/icons8-power-bi-48.png" alt="Icon">
                     <span>Asset report</span>
                 </a>
-                <a href="https://app.powerbi.com/groups/me/apps/b8cef0ae-8180-42d0-a766-796ba62b716c?experience=power-bi" target="_blank">
-                    <img src="image/icons8-power-bi-48.png" alt="Icon">
-                    <span>ISE APAC Reporting</span>
-                </a>
-                <a href="https://app.powerbi.com/groups/me/apps/b92a7fc2-d3c1-43df-bc8c-ce93ae30c532?experience=power-bi" target="_blank">
-                    <img src="image/icons8-power-bi-48.png" alt="Icon">
-                    <span>NEA OpEx ToolKits</span>
-                </a>
+                
             </div>
         </div>
         <div class="block" id="block3">
@@ -200,26 +201,33 @@
             </div>
         </div>
         <div class="block" id="block5">
-            <div class="block-title" contenteditable="true">Spare</div>
+            <div class="block-title" contenteditable="true">AI</div>
             <div class="block-content">
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="image/icons8-website-100.png" alt="Icon">
-                    <span>百度一下</span>
+                <!-- Gemini -->
+                <a href="https://aistudio.google.com/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=aistudio.google.com&sz=32" alt="Gemini Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>Gemini</span>
+                </a>
+
+                <!-- ChatGPT -->
+                <a href="https://openai.com/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=openai.com&sz=32" alt="ChatGPT Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>ChatGPT</span>
+                </a>
+
+                <!-- Claude -->
+                <a href="https://claude.ai/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=claude.ai&sz=32" alt="Claude Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>Claude</span>
+                </a>
+
+                <!-- DeepSeek -->
+                <a href="https://www.deepseek.com/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=deepseek.com&sz=32" alt="DeepSeek Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>DeepSeek</span>
                 </a>
                 <a href="https://www.baidu.com" target="_blank">
-                    <img src="image/icons8-website-100.png" alt="Icon">
-                    <span>www.baidu.com</span>
-                </a>
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="image/icons8-website-100.png" alt="Icon">
-                    <span>www.baidu.com</span>
-                </a>
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="image/icons8-website-100.png" alt="Icon">
-                    <span>www.baidu.com</span>
-                </a>
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="image/icons8-website-100.png" alt="Icon">
+                    <img src="https://app.powerbi.com/favicon.ico" alt="Icon">
                     <span>www.baidu.com</span>
                 </a>
                 <a href="https://www.baidu.com" target="_blank">
