--- a/index.html
+++ b/index.html
@@ -226,17 +226,20 @@
                     <img src="https://www.google.com/s2/favicons?domain=deepseek.com&sz=32" alt="DeepSeek Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
                     <span>DeepSeek</span>
                 </a>
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="https://app.powerbi.com/favicon.ico" alt="Icon">
-                    <span>www.baidu.com</span>
+                <!-- ISlide -->
+                <a href="https://www.islide.cc/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=https://www.islide.cc/&sz=32" alt="DeepSeek Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>iSlide</span>
                 </a>
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="image/icons8-website-100.png" alt="Icon">
-                    <span>www.baidu.com</span>
+                <!-- 知犀 -->
+                <a href="https://www.zhixi.com/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=https://www.zhixi.com/&sz=32" alt="DeepSeek Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>知犀思维导图</span>
                 </a>
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="image/icons8-website-100.png" alt="Icon">
-                    <span>www.baidu.com</span>
+                <!-- ChatExcel -->
+                <a href="https://chatexcel.com/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=https://chatexcel.com/&sz=32" alt="DeepSeek Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>ChatExcel</span>
                 </a>
                 <a href="https://www.baidu.com" target="_blank">
                     <img src="image/icons8-website-100.png" alt="Icon">
