--- a/index.html
+++ b/index.html
@@ -256,16 +256,13 @@
             </div>
         </div>
         <div class="block" id="block6">
-            <div class="block-title" contenteditable="true">Spare</div>
+            <div class="block-title" contenteditable="true">Others</div>
             <div class="block-content">
                 <link rel="icon" href="https://www.example.com/favicon.ico">
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="https://www.baidu.com/favicon.ico" alt="Icon">
-                    <span>百度一下</span>
-                </a>
-                <a href="https://www.baidu.com" target="_blank">
-                    <img src="https://app.powerbi.com/favicon.ico" alt="Icon">
-                    <span>www.baidu.com</span>
+                <!-- Notion -->
+                <a href="https://www.notion.so/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=https://www.notion.so/&sz=32" alt="Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>Notion</span>
                 </a>
                 <a href="https://www.baidu.com" target="_blank">
                     <img src="image/icons8-website-100.png" alt="Icon">
