--- a/index.html
+++ b/index.html
@@ -232,6 +232,11 @@
                     <span>ChatExcel</span>
                 </a>
                 
+                <!-- notebooklm -->
+                <a href="https://notebooklm.google.com/" target="_blank">
+                    <img src="https://www.google.com/s2/favicons?domain=https://notebooklm.google.com/&sz=32" alt="DeepSeek Icon" style="width: 16px; height: 16px; vertical-align: middle; margin-right: 5px;">
+                    <span>NotebookLM</span>
+                </a>
                 </a>
             </div>
         </div>
