--- a/index.html
+++ b/index.html
@@ -74,6 +74,11 @@
                     <img src="image/icons8-power-bi-48.png" alt="Icon">
                     <span>PowerAPP PBI</span>
                 </a>
+                
+                <a href="https://app.powerbi.com/groups/me/apps/b8cef0ae-8180-42d0-a766-796ba62b716c/reports/82b1eef3-66fe-44bb-b72b-d086329935c5/334f096cb5b6473b1a35?experience=power-bi" target="_blank">
+                    <img src="image/icons8-power-bi-48.png" alt="Icon">
+                    <span>Sales Individual Performance</span>
+                </a>
                 <a href="https://app.powerbi.com/groups/me/apps/38a4a8da-9a1c-436d-9f51-ed16949361e6?experience=power-bi" target="_blank">
                     <img src="image/icons8-power-bi-48.png" alt="Icon">
                     <span>Sales Management</span>
